# cliclicker

./: Cargo.toml  README.md  flake.nix
nix/: package.nix
src/: main.rs
