[package]
name = "cliclicker"
version = "0.1.0"
edition = "2024"
authors = [
  "c2fc2f <contact@c2fc2f.com>"
]
description = "A fast Wayland autoclicker"
readme = "README.md"
repository = "https://github.com/c2fc2f/cliclicker"
license = "MIT"
keywords = [
  "autoclicker", 
]
categories = [
  "command-line-utilities", 
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
missing_errors_doc = "warn"
missing_panics_doc = "warn"

[dependencies]
